johnson-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: johnson-backend
  labels:
    app: johnson-backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: johnson-backend
