johnson-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: johnson-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: johnson.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: johnson-backend
            port:
              number: 8000
